<resources>
    <string name="app_name">PopularMovies2</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="movie_favorites">Favorites</string>
    <string name="error_message">An error has occurred. Please try again by clicking on the menu options</string>
    <string name="connection_message">Movies can not be downloaded.Please check your internet connection</string>
    <string name="movie_title">Avatar</string>
    <string name="movie_overview">Fantasy</string>
    <string name="movie_vote_average">8.5/10</string>
    <string name="release_date">2012#821107#821114</string>
    <string name="movie_review">A solid thriller</string>
    <string name="movie_author">Bob Smith</string>
    <string name="movie_trailer">Watch the trailer!</string>
    <string name="action_share">Watch the trailer!</string>
    <string name="movie_review_title">Review</string>
    <string name="favorites_button_text_add">Add to Favorites</string>
    <string name="favorites_button_text_remove">Remove from Favorites</string>
    <string name="review_unavailable_toast">Review currently unavailable</string>
    <string name="trailer_unavailable_toast">Trailer currently unavailable</string>
    <string name="favorites_added">Movie added to favorites</string>
    <string name="favorites_already_added">Movie already stored in Favorites. "Add to Favorites" button disabled. </string>
    <string name="review_currently_unavailable_text">Review currently unavailable</string>
    <string name="trailer_currently_unavailable_text">Trailer currently unavailable</string>
    <string name="empty_view">Empty view</string>
    <string name="widget_movie_name_label">Movie:</string>
    <string name="widget_movie_name">Captain Marvel</string>
    <string name="movie_title_widget">Avengers</string>
    <string name="movie_removed_from_favorites">Movie removed from Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="delete_all_movies_from_favorites">Delete All Movies from Favorites</string>
    <string name="movies_deleted_toast">All Movies Deleted</string>

</resources>
