<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.popularmovies2.annin.example.android.popularmovies2.DetailActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/imageView_margin"
            android:layout_marginLeft="@dimen/imageView_margin"
            android:layout_marginRight="@dimen/imageView_margin"
            android:layout_marginStart="@dimen/imageView_margin"
            android:layout_marginTop="@dimen/imageView_top" />

        <Button
            android:id="@+id/favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/favorites_button_margin_left"
            android:layout_marginTop="@dimen/favorites_button_margin_top"
            android:focusable="false"
            android:text="@string/favorites_button_text" />

        <TextView
            android:id="@+id/original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:padding="@dimen/text_padding"
            android:text="@string/movie_title"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/original_title"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:padding="@dimen/text_padding"
            android:text="@string/movie_overview"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_overview"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:padding="@dimen/text_padding"
            android:text="@string/movie_vote_average"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vote_average"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:padding="@dimen/text_padding"
            android:text="@string/release_date"
            android:textSize="@dimen/text_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date"
            android:layout_marginTop="@dimen/trailer_view_margin_top"
            android:scrollbars="horizontal"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_view_trailer"
            style="@style/EmptyViewStyle"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:padding="@dimen/text_padding"
            android:visibility="gone"
            android:layout_below="@+id/release_date"
            tools:text="@string/movie_author"
            android:text ="@string/trailer_currently_unavailable_text"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerview_trailer"
            android:layout_marginBottom="@dimen/review_view_margin_bottom"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_view_review"
            style="@style/EmptyViewStyle"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/review_view_margin_bottom"
            android:padding="@dimen/text_padding"
            android:visibility="gone"
            android:layout_below="@+id/recyclerview_trailer"
            tools:text="@string/movie_author"
            android:text ="@string/review_currently_unavailable_text"/>

    </RelativeLayout>
</ScrollView>